force-app/main/default/objects/Lead/fields/Region_de_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Region_de_Despacho__c</fullName>
    <label>Región de Despacho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Iquique</fullName>
            </value>
            <value>
                <fullName>02 - Antofagasta</fullName>
            </value>
            <value>
                <fullName>03 - Copiapó</fullName>
            </value>
            <value>
                <fullName>04 - La Serena</fullName>
            </value>
            <value>
                <fullName>05 - Valparaíso</fullName>
            </value>
            <value>
                <fullName>06 - Rancagua</fullName>
            </value>
            <value>
                <fullName>07 - Talca</fullName>
            </value>
            <value>
                <fullName>08 - Concepción</fullName>
            </value>
            <value>
                <fullName>09 - Temuco</fullName>
            </value>
            <value>
                <fullName>10 - Puerto Montt</fullName>
            </value>
            <value>
                <fullName>11 - Coyhaique</fullName>
            </value>
            <value>
                <fullName>12 - Punta Arenas</fullName>
            </value>
            <value>
                <fullName>13 - Región Metropolitana</fullName>
            </value>
            <value>
                <fullName>14 - Los Ríos</fullName>
            </value>
            <value>
                <fullName>15 - Arica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>