force-app/main/default/objects/Lead/fields/Rut_a_Validar__c.field-meta.xml
<CustomField>
    <fullName>Rut_a_Validar__c</fullName>
    <formula>IF(
LEN(RUT__c) = 9,
&quot;0&quot; &amp; RUT__c,
RUT__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rut a Validar</label>
    <type>Text</type>
</CustomField>