force-app/main/default/objects/Lead/fields/RUT_Contacto__c.field-meta.xml
<CustomField>
    <fullName>RUT_Contacto__c</fullName>
    <label>RUT Contacto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>