force-app/main/default/objects/Lead/fields/Tipo_de_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Empresa__c</fullName>
    <label>Tipo de Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bares</fullName>
            </value>
            <value>
                <fullName>Cadena de cine</fullName>
            </value>
            <value>
                <fullName>Cafeterías</fullName>
            </value>
            <value>
                <fullName>Catering service</fullName>
            </value>
            <value>
                <fullName>Clínicas y Hospitales</fullName>
            </value>
            <value>
                <fullName>Clubes sociales</fullName>
            </value>
            <value>
                <fullName>Comedores institucionales</fullName>
            </value>
            <value>
                <fullName>Distribuidores</fullName>
            </value>
            <value>
                <fullName>Heladerías</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Industrias</fullName>
            </value>
            <value>
                <fullName>Panaderías</fullName>
            </value>
            <value>
                <fullName>Pizzerías</fullName>
            </value>
            <value>
                <fullName>Reposterías</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Sushi</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>--Ninguno--</fullName>
                <isActive>false</isActive>
                <label>--Ninguno--</label>
            </value>
            <value>
                <fullName>Industria</fullName>
                <isActive>false</isActive>
                <label>Industria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>