force-app/main/default/objects/Lead/fields/URL_QR__c.field-meta.xml
<CustomField>
    <fullName>URL_QR__c</fullName>
    <formula>&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&amp;Id&amp;QR-OpenDay-&quot; &amp; Company &amp; &quot;-&quot; &amp; RUT__c &amp; &quot;-&quot; &amp; Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL QR</label>
    <type>Text</type>
</CustomField>