force-app/main/default/objects/Lead/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <type>TextArea</type>
</CustomField>