force-app/main/default/objects/Lead/fields/UTM_MEDIUM__c.field-meta.xml
<CustomField>
    <fullName>UTM_MEDIUM__c</fullName>
    <label>UTM_medium</label>
    <type>TextArea</type>
</CustomField>