force-app/main/default/objects/Lead/fields/UTM_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>UTM_SOURCE__c</fullName>
    <label>UTM source</label>
    <type>TextArea</type>
</CustomField>