force-app/main/default/objects/Lead/fields/ya_es_Cliente__c.field-meta.xml
<CustomField>
    <fullName>ya_es_Cliente__c</fullName>
    <label>¿Ya es Cliente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>--Ninguno--</fullName>
                <isActive>false</isActive>
                <label>--Ninguno--</label>
            </value>
            <value>
                <fullName>--Seleccione--</fullName>
                <isActive>false</isActive>
                <label>--Seleccione--</label>
            </value>
            <value>
                <fullName>Negocio</fullName>
                <isActive>false</isActive>
                <label>Negocio</label>
            </value>
            <value>
                <fullName>Particular</fullName>
                <isActive>false</isActive>
                <label>Particular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>