force-app/main/default/objects/Lead/recordTypes/Cliente_Persona.recordType-meta.xml
<RecordType>
    <fullName>Cliente_Persona</fullName>
    <active>true</active>
    <businessProcess>Leads Estandar</businessProcess>
    <label>Cliente Persona</label>
</RecordType>