force-app/main/default/objects/Lead/recordTypes/Empresa.recordType-meta.xml
<RecordType>
    <fullName>Empresa</fullName>
    <active>true</active>
    <businessProcess>Leads Estandar</businessProcess>
    <label>Empresa</label>
</RecordType>