force-app/main/default/objects/Lead/recordTypes/Lead_Standar.recordType-meta.xml
<RecordType>
    <fullName>Lead_Standar</fullName>
    <active>false</active>
    <businessProcess>Leads Estandar</businessProcess>
    <label>Lead Standar</label>
</RecordType>