force-app/main/default/objects/Lead/recordTypes/OpenDay.recordType-meta.xml
<RecordType>
    <fullName>OpenDay</fullName>
    <active>true</active>
    <businessProcess>%23OpenDay</businessProcess>
    <label>#OpenDay</label>
</RecordType>