force-app/main/default/objects/Lead/validationRules/Canal_paso_a_Prospecto.validationRule-meta.xml
<ValidationRule>
    <fullName>Canal_paso_a_Prospecto</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Lead Contactado&quot;) &amp;&amp; ISPICKVAL(Gerencia__c ,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Gerencia__c</errorDisplayField>
    <errorMessage>Completar el campo Canal</errorMessage>
</ValidationRule>