force-app/main/default/objects/Lead/validationRules/Centro_abastecimiento_paso_a_prospecto.validationRule-meta.xml
<ValidationRule>
    <fullName>Centro_abastecimiento_paso_a_prospecto</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Lead Contactado&quot;) &amp;&amp;
ISBLANK(TEXT(Centro_de_Abastecimiento__c))</errorConditionFormula>
    <errorDisplayField>Centro_de_Abastecimiento__c</errorDisplayField>
    <errorMessage>Completar el campo Centro de Abastecimiento</errorMessage>
</ValidationRule>