force-app/main/default/objects/Lead/validationRules/Comuna_Region_Validar.validationRule-meta.xml
<ValidationRule>
    <fullName>Comuna_Region_Validar</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Lead Contactado&quot;),
    OR(
        ISBLANK(Comunas__c),
        ISBLANK(TEXT(Regi_n__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Comunas__c</errorDisplayField>
    <errorMessage>Debe ingresar Región y Comuna</errorMessage>
</ValidationRule>