force-app/main/default/objects/Lead/validationRules/Derivado_a_Asesor.validationRule-meta.xml
<ValidationRule>
    <fullName>Derivado_a_Asesor</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Derivado_a_Asesor__c) &amp;&amp;
NOT(
OR(
$User.Username = &apos;mceruli@icbfs.cl&apos;,
$Profile.Name = &quot;System Administrator&quot;,
$User.Username = &apos;bnavarrete@icbfs.cl&apos;
)
)</errorConditionFormula>
    <errorDisplayField>Derivado_a_Asesor__c</errorDisplayField>
    <errorMessage>Este campo solo puede ser modificado por Gerencia Superior y el Administrador</errorMessage>
</ValidationRule>