force-app/main/default/objects/Lead/validationRules/Direccion_Paso_a_Prospecto.validationRule-meta.xml
<ValidationRule>
    <fullName>Direccion_Paso_a_Prospecto</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status,&quot;Lead Contactado&quot;) &amp;&amp;
   AND
			(ISBLANK(Direccion__City__s),
				ISBLANK(Direccion__Street__s)
			)</errorConditionFormula>
    <errorDisplayField>Direccion__Street__s</errorDisplayField>
    <errorMessage>Completar el campo Dirección</errorMessage>
</ValidationRule>