force-app/main/default/objects/Lead/validationRules/First_Name_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Requerido</fullName>
    <active>true</active>
    <description>Valida que el nombre sea obligatorio antes de guardar.</description>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>El nombre es obligatorio</errorMessage>
</ValidationRule>