force-app/main/default/objects/Lead/validationRules/Observacion_ClienteNoContactado.validationRule-meta.xml
<ValidationRule>
    <fullName>Observacion_ClienteNoContactado</fullName>
    <active>true</active>
    <description>Valida que cuando el estado sea Congelado o Prospecto y el cliente no haya sido contactado (Cliente_Contactado__c = NO), sea obligatorio ingresar una observación indicando el motivo.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status, &quot;Congelado&quot;),
        ISPICKVAL(Status, &quot;Prospecto&quot;)
    ),
    ISPICKVAL(Cliente_Contactado__c, &quot;NO&quot;),
    ISBLANK(Observacion__c)
)</errorConditionFormula>
    <errorDisplayField>Observacion__c</errorDisplayField>
    <errorMessage>Debe ingresar una Observación indicando por qué no se ha contactado al cliente.</errorMessage>
</ValidationRule>