force-app/main/default/objects/Lead/validationRules/regla_de_validacion_BOT.validationRule-meta.xml
<ValidationRule>
    <fullName>regla_de_validacion_BOT</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(CONTAINS(RUT__c, &quot;-&quot;))</errorConditionFormula>
    <errorMessage>Bot Detectado!!</errorMessage>
</ValidationRule>