force-app/main/default/objects/Lead/validationRules/RUT_Contacto_Empresa.validationRule-meta.xml
<ValidationRule>
    <fullName>RUT_Contacto_Empresa</fullName>
    <active>true</active>
    <description>Valida que, para registros de tipo Empresa, cuando el tipo de contacto corresponda a Representante Legal o Dueño, el campo RUT_Contacto__c sea obligatorio.</description>
    <errorConditionFormula>AND(
  $RecordType.DeveloperName = &quot;Empresa&quot;,
  OR(
    INCLUDES(Tipo_de_Contacto__c, &quot;Representante Legal&quot;),
    INCLUDES(Tipo_de_Contacto__c, &quot;Dueño&quot;)
  ),
  ISBLANK(RUT_Contacto__c)
)</errorConditionFormula>
    <errorDisplayField>RUT_Contacto__c</errorDisplayField>
    <errorMessage>Debe ingresar el RUT Contacto</errorMessage>
</ValidationRule>