force-app/main/default/objects/Lead/validationRules/Rut_valido_paso_a_prospecto.validationRule-meta.xml
<ValidationRule>
    <fullName>Rut_valido_paso_a_prospecto</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Lead Contactado&quot;) &amp;&amp;(ISBLANK(RUT__c))</errorConditionFormula>
    <errorDisplayField>RUT__c</errorDisplayField>
    <errorMessage>Completar el campo RUT</errorMessage>
</ValidationRule>