force-app/main/default/objects/Lead/validationRules/Sucursal_valido_paso_a_prospecto.validationRule-meta.xml
<ValidationRule>
    <fullName>Sucursal_valido_paso_a_prospecto</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status , &quot;Lead Contactado&quot;) &amp;&amp;
ISBLANK(TEXT(Sucursal__c))</errorConditionFormula>
    <errorDisplayField>Sucursal__c</errorDisplayField>
    <errorMessage>Completar el campo Sucursal</errorMessage>
</ValidationRule>